# AK3AL

./: .gitignore  README.md
binary_tree/: .gitlab-ci.yml  CMakeLists.txt  README.md
binary_tree/app/: CMakeLists.txt  main.c
binary_tree/docs/html/: annotated.html  annotated_dup.js  classes.html  data_8c.html  data_8c__incl.map  data_8c__incl.md5  data_8h.html  data_8h__dep__incl.map  data_8h__dep__incl.md5  data_8h__incl.map  data_8h_source.html  dir_000000_000001.html  dir_000001_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_d422163b96683743ed3963d4aac17747.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__data.html  group__tree.html  group__tree.js  index.html  main_8c.html  main_8c.js  main_8c__incl.map  main_8c__incl.md5  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  (+20 more)
binary_tree/src/: CMakeLists.txt  data.c  tree.c
binary_tree/src/include/: data.h  tree.h
binary_tree/test_files/: input1.txt  input3.txt  input4.txt  input5.txt  input6.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt
binary_tree/tests/: CMakeLists.txt  tests.cpp
dijkstras_algorithm/: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
dijkstras_algorithm/app/: CMakeLists.txt  main.c
dijkstras_algorithm/docs/html/: annotated.html  annotated_dup.js  classes.html  data_8h.html  data_8h.js  data_8h__dep__incl.map  data_8h__dep__incl.md5  data_8h__incl.map  data_8h__incl.md5  data_8h_source.html  dijkstra_8c.html  dijkstra_8c.js  dijkstra_8c__incl.map  dijkstra_8c__incl.md5  dijkstra_8h.html  dijkstra_8h.js  dijkstra_8h__dep__incl.map  dijkstra_8h__dep__incl.md5  dijkstra_8h__incl.map  dijkstra_8h__incl.md5  dijkstra_8h_source.html  dir_000000_000001.html  dir_000001_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  dir_d422163b96683743ed3963d4aac17747_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  group__data.html  (+43 more)
dijkstras_algorithm/src/: CMakeLists.txt  data.c  dijkstra.c  heap.c  map.c
dijkstras_algorithm/src/include/: data.h  dijkstra.h  heap.h  map.h
dijkstras_algorithm/test_files/: input1.txt  map1.csv  map2.csv  map3.csv  map4.csv  output1.txt
dijkstras_algorithm/tests/: CMakeLists.txt  tests.cpp
dtmf_generator/: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
dtmf_generator/app/: CMakeLists.txt  main.c
dtmf_generator/docs/html/: annotated.html  classes.html  dir_000000_000001.html  dir_000001_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  dtmf_8c.html  dtmf_8c.js  dtmf_8c__incl.map  dtmf_8c__incl.md5  dtmf_8h.html  dtmf_8h.js  dtmf_8h__dep__incl.map  dtmf_8h__dep__incl.md5  dtmf_8h__incl.map  dtmf_8h__incl.md5  dtmf_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  group__dtmf.html  group__dtmf.js  group__vector.html  group__vector.js  index.html  main_8c.html  main_8c.js  main_8c__incl.map  main_8c__incl.md5  (+13 more)
dtmf_generator/libs/: CMakeLists.txt
dtmf_generator/libs/wavfile/: CMakeLists.txt  wavfile.c  wavfile.h
dtmf_generator/src/: CMakeLists.txt  dtmf.c  vector.c
dtmf_generator/src/include/: dtmf.h  vector.h
dtmf_generator/test_files/: input1.txt  output1.txt
dtmf_generator/tests/: CMakeLists.txt  tests.cpp
fsm_comment_remover/src/: FSM.c
hash_table/: .clang-format  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
hash_table/app/: CMakeLists.txt  main.c
hash_table/docs/html/: annotated.html  annotated_dup.js  classes.html  data_8c.html  data_8c.js  data_8c__incl.map  data_8c__incl.md5  data_8h.html  data_8h.js  data_8h__dep__incl.map  data_8h__dep__incl.md5  data_8h_source.html  data__cstring_8c.html  data__cstring_8c.js  data__cstring_8c__incl.map  data__cstring_8c__incl.md5  data__cstring_8h.html  data__cstring_8h.js  data__cstring_8h__dep__incl.map  data__cstring_8h__dep__incl.md5  data__cstring_8h__incl.map  data__cstring_8h__incl.md5  data__cstring_8h_source.html  data__person_8c.html  data__person_8c.js  data__person_8c__incl.map  data__person_8c__incl.md5  data__person_8h.html  data__person_8h.js  data__person_8h__incl.map  (+96 more)
hash_table/src/: CMakeLists.txt  data.c  data_cstring.c  data_person.c  hash_private.c  table.c
hash_table/src/include/: data.h  data_cstring.h  data_person.h  hash_private.h  table.h
hash_table/test_files/: input1.txt  output1.txt
hash_table/tests/: CMakeLists.txt  DataMock.cpp  DataMock.h  tests.cpp
heap/: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
heap/app/: CMakeLists.txt  main.c
heap/src/: CMakeLists.txt  data.c  heap.c
heap/src/include/: data.h
heap/test_files/: input1.txt  output1.txt
heap/tests/: CMakeLists.txt  tests.cpp
list/: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
list/app/: CMakeLists.txt  main.c
list/src/: CMakeLists.txt  data.c  list.c
list/src/include/: data.h  list.h
list/test_files/: input1.txt  input2.txt  input3.txt  input4.txt  output1.txt  output2.txt  output3.txt  output4.txt
list/tests/: CMakeLists.txt  tests.cpp
vector/: .gitlab-ci.yml
vector/app/: CMakeLists.txt
vector/src/: CMakeLists.txt  vector.c
vector/tests/: CMakeLists.txt
(+295 files in other folders)
